fix: the vm does not seem to set this variable correctly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           rustup component add clippy rustfmt
         run: |
           . ~/.cargo/env
+          export CC=clang
           cargo fmt -- --check
           cargo clippy -- -D warnings
           cargo build --verbose
