--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,14 +66,16 @@ jobs:
     - name: Test in FreeBSD
       uses: vmactions/freebsd-vm@v1
       with:
+        release: "14.3"
         usesh: true
-        sync: sshfs
         prepare: |
           pkg install -y curl llvm-devel git
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           . ~/.cargo/env
           rustup component add clippy rustfmt
         run: |
+          cc -v
+          c++ -v
           . ~/.cargo/env
           export CC=clang
           cargo fmt -- --check
