fix: update version to 1.0.0, add testing for generate-bindings feature, and remove broken clang argument

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,3 +82,4 @@ jobs:
           cargo clippy -- -D warnings
           cargo build --verbose
           cargo test --verbose
+          cargo test --verbose --features generate-bindings
