fix: update repository URL to point to the correct GitHub location

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "FFI wrappers for the Linux Pluggable Authentication Modules (PAM)
 license = "MIT OR Apache-2.0"
 categories = ["authentication", "api-bindings", "external-ffi-bindings", "os::unix-apis"]
 
-repository = "https://github.com/1wilkens/pam-sys.git"
+repository = "https://github.com/lechatp/pam-sys.git"
 documentation = "https://docs.rs/pam-sys/"
 readme = "README.md"
 include = [ "LICENSE-*", "README.md", "CHANGELOG.md", "src/lib.rs", "build.rs", "wrapper.h"]
